[package]
name = "gossip"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
futures = "0.3.31"
heapless = { version = "0.7.17", features = ["serde"] }
human_ids = "0.1.1"
log = "0.4.27"
nanoid = "0.4.0"
postcard = "1.1.1"
rand = "0.9.1"
serde = { version = "1.0.*", default-features = false }
tailscale-api = "0.1.5"
tempdir = "0.3.7"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tsnet = { git = "https://github.com/chrishayen/libtailscale", branch = "rust" }
